# RARIS

./: .env.example  .gitignore  CLAUDE.md  RARI_MACRO_DEVELOPMENT_PLAN_v2.0.md  README.md  docker-compose.prod.yml  docker-compose.yml
.dfw/: config.json  (+3 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_programs_table.py  003_add_golden_run_snapshots.py  004_widen_authority_type.py  005_add_jurisdiction_code_and_expand_jurisdiction_enum.py  006_add_checkpoint_data.py  007_add_run_params.py  008_add_citation_depth_hint_to_sources.py  009_widen_id_columns.py
backend/app/: auth.py  config.py  embedding_cache.py  errors.py  main.py  middleware.py  rate_limit.py  scheduler.py
backend/app/acquisition/: api_adapter.py  downloader.py  orchestrator.py  scraper.py  staging.py
backend/scripts/: algo014_validation_checkpoint.sql  repair_depth_hint_checkpoint.py  write_checkpoint.sql
backend/tests/: conftest.py  test_acquisition_schema.py  test_api_adapter.py  test_api_integration.py  test_auth_and_admin.py  test_chunker.py  test_curation.py  test_embedding_cache.py  test_eval_metrics.py  test_export.py  test_feedback.py  test_golden_runs.py  test_graph_discovery.py  test_graph_discovery_v4.py  test_health.py  test_ingestion_adapters.py  test_llm_grounding.py  test_manifest_schema.py  test_rate_limit.py  test_reranker_batch.py  test_retrieval_agent.py  test_retrieval_precision.py  test_retrieval_search.py  test_scraper_rate_limit.py  test_seed_parser.py  test_vertical.py
(+257 files in other folders)
