[project]
name = "raris-backend"
version = "0.1.0"
description = "RARIS — Regulatory Analysis & Research Intelligence System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "sse-starlette>=2.2.0",
    "openai>=1.60.0",
    "anthropic>=0.43.0",
    "google-genai>=1.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "pdfplumber>=0.11.0",
    "tiktoken>=0.8.0",
    "pgvector>=0.3.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
